# Levis

./: CMakeLists.txt  README.md  compile.sh
client_log_dump_lib/: CMakeLists.txt
client_log_dump_lib/src/: client_log_dump.cpp  client_log_dump.h  client_main_test.cpp
config_dir/: lefar.cfg  rc.local
docs/: Readme.md  asr_api.md  clock_api.md  config_descr.md  description_api.md  frame_work.md  led_api.md  log_api.md  play_api.md  release_note.md  scripts_descri.md  structure_module.md  tts_api.md  volume_control.md
frame_work/: cJSON.cpp  cJSON.h  clock_proc.cpp  clock_proc.h  frame_work.cpp  frame_work.h  frame_work_common_def.h  frame_work_main.cpp  framework_volume_ctl.cpp  framework_volume_ctl.h  play_audio.cpp  play_audio.h  respeaker_4mic_array.py  respeaker_4mic_array_class.py  send_asr.cpp  send_asr.h  test_env.cpp  test_env.h  tts_proc.cpp  tts_proc.h
include/: globaldef.h  preproc.h
include/libavutil/: ffversion.h
libs/: libarmnnBasePipeServer.so.21  libarmnnQuantizer.so.21.0  libavdevice.so.58.7.100  libavutil.so.56.30.100  libmad.so.0.2.1  libswresample.so.3.4.100  libswscale.so.5.4.101  libtimelineDecoder.so.21.0  libtimelineDecoderJson.so.21
local_pcm/: awake_voice.pcm  btn_center_1_ding.pcm  clock_set_sucess_voice.pcm  clock_voice.pcm  env_all_ok_voice.pcm  env_asr_err_voice.pcm  env_eight_channel_test_voice.pcm  env_music_err_voice.pcm  env_tts_err_voice.pcm  get_music_fail.pcm  get_song_data_err.pcm  music_list_end.pcm  net_err.pcm  no_find_music.pcm  no_hear.pcm  not_understand.pcm  sys_voice.pcm
pixel_ring/examples/: respeaker_4mic_array.py
pixel_ring/pixel_ring/: __init__.py  apa102_pixel_ring.py  my_led_ring.py  my_pattern.py
raspbian_buster_lite_os/: README.md
scripts/: framework_start.sh  self_start.sh  serv_log_proc_start.sh
server_log_dump/: CMakeLists.txt
server_log_dump/src/: server_log_dump.cpp  server_log_dump.h  server_main.cpp
tflite_model/: converted_model.tflite
